# rag-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
common/: loggers.py
dockerfiles/: Dockerfile.server  Dockerfile.streamlit
experiments/: contents_processing.ipynb  ingestion.ipynb  pdf_preprocessing.ipynb  pre_processing.ipynb  rag.ipynb
ingestion/: __init__.py  config.py  retrievers.py  retrivers.py  states.py
ingestion/chains/: summary.py
ingestion/models/: multimodal.py
ingestion/nodes/: base.py  elements.py  layout.py  pdf.py  summary.py
ingestion/utils/: document_processor.py  evaluator.py  image_processor.py  layout_analyzer.py  state_serializer.py  tag_processor.py
scripts/: init.sh
service/apis/: __init__.py
src/ingestion/: states.py
src/service/: run_server.py  run_streamlit.py
src/service/apis/: __init__.py
