[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "fastapi>=0.115.2",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.12",
    "langgraph>=0.2.39",
    "pymupdf>=1.24.11",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
]
